--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+*{
+@import url('https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Lora:ital,wght@0,400..700;1,400..700&display=swap');
+
+}
 body {
     font-family: Arial, sans-serif;
     margin: 0;
